--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-#解决中文乱码问题
+#\u89E3\u51B3\u4E2D\u6587\u4E71\u7801\u95EE\u9898
 spring.http.encoding.charset=utf8
 spring.http.encoding.force=true
 spring.http.encoding.enabled=true
 server.tomcat.uri-encoding=UTF-8
 
-com.rockywu.username = "吴飞群"
+com.rockywu.username = \u5434\u98DE\u7FA4
 com.rockywu.age = 25
+
+# Mysql\u6570\u636E\u5E93\u914D\u7F6E\u4FE1\u606F
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/mytest?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.driver_class_name = com.mysql.jdbc.Driver
